--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
         <div class="input-field">
           <input type="text" placeholder="First Name" id="firstname"><span id="firstname-error"></span>
           <div class="error-icon">
-            <img src="./images/icon-error.svg" alt="error icon" class="errorIcon-firstname hidden">
+            <img src="/images/icon-error.svg" alt="error icon" class="errorIcon-firstname hidden">
           </div>
         </div>
         <div class="input-field">
           <input type="text" placeholder="Last Name" id="lastname"><span id="lastname-error"></span>
           <div class="error-icon">
-           <img src="./images/icon-error.svg" alt="error icon" class="errorIcon-lastname hidden">
+           <img src="/images/icon-error.svg" alt="error icon" class="errorIcon-lastname hidden">
           </div>
         </div>
         <div class="input-field">
           <input type="text" placeholder="Email Address" id="email"><span  id="email-error"></span>
           <div class="error-icon">
-           <img src="./images/icon-error.svg" alt="error icon" class=" errorIcon-email hidden">
+           <img src="/images/icon-error.svg" alt="error icon" class=" errorIcon-email hidden">
           </div>
         </div>
         <div class="input-field">
           <input type="password" placeholder="Password" id="password"><span  id="password-error"></span>
           <div class="error-icon">
-           <img src="./images/icon-error.svg" alt="error icon" class="errorIcon-password hidden">
+           <img src="/images/icon-error.svg" alt="error icon" class="errorIcon-password hidden">
           </div>
         </div>
       </div>
