--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="input-field">
           <input type="text" placeholder="First Name" id="firstname"><span id="firstname-error"></span>
           <div class="error-icon">
-            <img src="/images/icon-error.svg" alt="error icon" class="errorIcon-firstname hidden">
+            <img src="images/icon-error.svg" alt="error icon" class="errorIcon-firstname hidden">
           </div>
         </div>
         <div class="input-field">
